--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 </head>
 <body>
     <h2>Caroline Borges Boaventura Ferreira de Sousa</h2>
+
+    <a href="#quem_sou">QUEM SOU EU</a>
+    <a href="#habilidades">HABILIDADES</a>
+    <a href="#dicas">DICAS</a>
+    <br/>
+    <br/>
     <img id="foto" src="minha_foto.jpeg" alt="Uma foto minha, sorrindo, com o Castelo da Cinderela, símbolo do Magic Kingdom Park, ao fundo." width="300 px">
-    <p>Sou mineira, do interior de Minas Gerais, mas moro em BH há muito tempo, então me considero uma belorizontina de coração!<br>
+    <p id="quem_sou">Sou mineira, do interior de Minas Gerais, mas moro em BH há muito tempo, então me considero uma belorizontina de coração!<br>
     Sou formada em Engenharia Ambiental, mas sempre fui apaixonada por tecnologia, por isso me inscrevi no curso da Trybe!</p>
     <br>
-    <h4><em>Habilidades:</em></h4>
+    <h4 id="habilidades"><em>Habilidades:</em></h4>
     <ul>
         <li><strong>Focada</strong></li>
         <li>Organizada</li>
@@ -19,8 +25,8 @@
     </ul>
     <a href="#foto">Minha Foto</a>
 
-    <h4><em>Dica de Blog:</em></h4>
-    <p>Para quem curte</p>
+    <h4 id="dicas"><em>Dica:</em></h4>
+    <a href="https://open.spotify.com/show/0LvIvCZfntBuZOpOEhTU0K" target="_blank">Podcast B9</a>
     
 </body>
 </html>
