Inclusão de Linkedin e GitHub

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <img id="foto" src="minha_foto.jpeg" alt="Uma foto minha, sorrindo, com o Castelo da Cinderela, símbolo do Magic Kingdom Park, ao fundo." width="300 px">
     <p id="quem_sou">Sou mineira, do interior de Minas Gerais, mas moro em BH há muito tempo, então me considero uma belorizontina de coração!<br>
     Sou formada em Engenharia Ambiental, mas sempre fui apaixonada por tecnologia, por isso me inscrevi no curso da Trybe!</p>
+    <a href="https://www.linkedin.com/in/caroline-boaventura-79544b53/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/caroline-boaventura" target="_blank">GitHub</a>
     <br>
     <h4 id="habilidades"><em>Habilidades:</em></h4>
     <ul>
