Testando envio ao GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="paragraph" href="https://open.spotify.com/show/39IqvZCSC52QAehb4b4aaR" target="_blank">Podcast - Mamilos</a><br>
             <a class="paragraph" href="https://www.youtube.com/user/maddumagalhaes" target="_blank">Youtube - Maddu Magalhães</a><br>
             <a class="paragraph" href="https://www.youtube.com/user/einerdtv" target="_blank">Youtube - Ei Nerd</a><br>
-            <a class="paragraph" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe</a>
+            <a class="paragraph" href="https://blog.betrybe.com/" target="_blank">Blog da Trybe!</a>
     </div>
     
 </body>
